--- a/goPomelo/css/style.css
+++ b/goPomelo/css/style.css
@@ -87,7 +87,7 @@ Main components
 #cd-intro {
   position: relative;
   height: 100%;
-  background: url("../img/bg-img.jpg") no-repeat center center;
+  background: url("../goPomelo/img/bg-img.jpg") no-repeat center center;
   background-size: cover;
 }
 #cd-intro h1 {
@@ -143,7 +143,7 @@ Main components
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("../img/bg-img.jpg") no-repeat center center;
+  background: url("../goPomelo/img/bg-img.jpg") no-repeat center center;
   background-size: cover;
   -webkit-filter: blur(4px);
   filter: blur(4px);
