--- a/goPomelo/css/style.css
+++ b/goPomelo/css/style.css
@@ -80,6 +80,7 @@ html,body{
   height:100%;
   display: inline-block;
   font-size: medium;
+  color:#333;
 }
 .css_container article>div.css_map-container>div{
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
