--- a/goPomelo/css/style.css
+++ b/goPomelo/css/style.css
@@ -6,13 +6,7 @@
   background: #1d9693;
   color:#f3f3f3;
 }
-/*.css_flex-container{*/
-  /*display: -webkit-box;      !* OLD - iOS 6-, Safari 3.1-6 *!*/
-  /*display: -moz-box;         !* OLD - Firefox 19- (buggy but mostly works) *!*/
-  /*display: -ms-flexbox;      !* TWEENER - IE 10 *!*/
-  /*display: -webkit-flex;     !* NEW - Chrome *!*/
-  /*display: flex;*/
-/*}*/
+
 .css_default-transition{
   transition: all 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
   -webkit-transition: all 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -20,13 +14,6 @@
   -o-transition: all 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
   -ms-transition: all 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
-/*.css_default-transition{*/
-  /*transition: all 200ms linear;*/
-  /*-webkit-transition: all 200ms linear;*/
-  /*-moz-transition: all 200ms linear;*/
-  /*-o-transition: all 200ms linear;*/
-  /*-ms-transition: all 200ms linear;*/
-/*}*/
 
 [class*='-toggle-helper'] {
   display: none;
@@ -74,6 +61,8 @@ html,body{
   height:100%;
   font-size: medium;
   display: inline-block;
+ vertical-align: top;
+ overflow:hidden;
 }
 .css_container article{
   width:100%;
@@ -81,6 +70,7 @@ html,body{
   display: inline-block;
   font-size: medium;
   color:#333;
+  vertical-align: top;
 }
 .css_container article>div.css_map-container>div{
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -112,5 +102,72 @@ html,body{
   width:100%;
   height:100%;
 }
+.css_setting-container{
+position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+	    padding: 10px;
+}
+.css_setting-container a{
+    display: block;
+    line-height: 0;
+	margin-bottom: 25px;
+}
+.css_setting-container a>img{
+width:100%;
+}
+.css_setting-container a span{
+    display: block;
+    line-height: normal;
+    margin-top: -2px;
+    padding-left: 22px;
+	    color: #fff;
+    font-weight: bold;
+}
+.css_setting-container a+h3{
+border-bottom: 1px solid #333;
+font-size: 18px;
+    font-weight: normal;
+    letter-spacing: 0.5px;
+}
 
+ul.css_filter-list{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+	}
 
+ul.css_filter-list li{
+font-size: 15px;
+    padding: 10px;
+    margin-bottom: 2px;
+    cursor: pointer;
+	    text-shadow: 0px 0px 29px;
+}	
+ul.css_filter-list li:nth-child(1){
+    color: #dc4949;
+}
+ul.css_filter-list li:nth-child(2){
+color: #fcab03;
+}
+ul.css_filter-list li:nth-child(3){
+    color: #1b68bb;
+}
+ul.css_filter-list li:nth-child(4){
+color: #7428e2;
+}
+ul.css_filter-list li:hover{
+color:#eeeeee
+}
+ul.css_filter-list li label{cursor:pointer}
+ul.css_filter-list li label>input{display:none}
+ul.css_filter-list li label>input+i{    
+opacity: 0;
+    font-size: 13px;
+    padding: 0 5px;
+    margin: 0 18px 0 0;
+	}
+ul.css_filter-list li label>input:checked+i{opacity:1}
